Updated electron content - Removed test classes - Added ability to retrocycle the recursive object structure from json file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.1/vivus.min.js'></script>-->
     <script src="assets/js/vendor/jquery.min.js"></script>
     <script src="assets/js/vendor/p5.min.js"></script>
+    <script src="assets/js/vendor/cycle.js"></script>
+    <script src="assets/data/nodes.js"></script>
     <script src="assets/data/locations.js"></script>
     <script src="assets/js/main.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
