tried implementing my pathfinder

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.1/vivus.min.js'></script>-->
     <script src="assets/js/vendor/p5.min.js"></script>
     <script src="assets/js/vendor/cycle.js"></script>
+    <script src="assets/js/graph.js"></script>
     <script src="assets/js/vendor/graph.js"></script>
     <script src="assets/js/vendor/bezier.js"></script>
     <script src="assets/js/vendor/jquery.min.js"></script>
