Implemented basic scaling

--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
                     <span class="label" tooltip="So viele Autos können durch die Trucks jedes Jahr aufgeladen werden">Jährlich</span>
                 </div>
             </div>
-            <div class="static-value">
+            <!--<div class="static-value">
                 <span id="maxTruckUptime" class="amount">20:51:01</span>
                 <span class="label" tooltip="So lange dauert es, wenn ein Truck ohne Unterbrechungen Autos lädt, bis er leer wird">bis ein Truck selbst aufladen muss</span>
             </div><!--
-            --><div class="progress-bar">
+            --<div class="progress-bar">
                 <span class="label">Aktuelle durchschnittliche Ladung</span>
                 <span class="amount">50%</span>
                 <div class="bar">
                     <div class="progress" style="width: 50%"></div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
         <h1>Autos</h1>
