--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
     <script>if (window.module) module = window.module;</script>
     <script src="assets/data/nodes.js"></script>
     <script src="assets/data/nodeGraph.js"></script>
-    <script src="assets/data/locations.js"></script>
+    <!--<script src="assets/data/locations.js"></script>-->
+    <script src="assets/js/settings.js"></script>
+    <script src="assets/js/helpers.js"></script>
     <script src="assets/js/calculations.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/modules/Node.js"></script>
+    <script src="assets/js/modules/City.js"></script>
+    <script src="assets/js/modules/NodeManager.js"></script>
+    <script src="assets/js/ui.js"></script>
+    <script src="assets/js/modules/Map.js"></script>
+    <script src="assets/js/modules/Vehicle.js"></script>
+    <script src="assets/js/modules/Car.js"></script>
+    <script src="assets/js/dev.js"></script>
+    <script src="assets/js/core.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
     <title>E-Motion</title>
 </head>
@@ -64,7 +74,7 @@
         </div>
 
         <div class="data-group cozy">
-            
+
         </div>
 
         <h1>Trucks</h1>
