--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="data-group cozy">
-            
+
         </div>
 
         <h1>Trucks</h1>
@@ -99,7 +99,7 @@
 
         <h1>Autos</h1>
         <div class="data-group">
-            <div class="progress-bar">
+            <div class="progress-bar" id="average-charge">
                 <span class="label">Aktuelle durchschnittliche Ladung</span>
                 <span class="amount">50%</span>
                 <div class="bar">
