Added e-motion trucks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="assets/js/settings.js"></script>
     <script src="assets/js/helpers.js"></script>
     <script src="assets/js/calculations.js"></script>
+    <script src="assets/js/modules/Events.js"></script>
     <script src="assets/js/modules/Node.js"></script>
     <script src="assets/js/modules/City.js"></script>
     <script src="assets/js/modules/NodeManager.js"></script>
@@ -28,8 +29,10 @@
     <script src="assets/js/modules/Map.js"></script>
     <script src="assets/js/modules/Vehicle.js"></script>
     <script src="assets/js/modules/Car.js"></script>
+    <script src="assets/js/modules/Truck.js"></script>
     <script src="assets/js/dev.js"></script>
-    <script src="assets/js/core.js"></script>
+    <script src="assets/js/setup.js"></script>
+    <script src="assets/js/draw.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
     <title>E-Motion</title>
 </head>
