Added functionality to the 'average car charge' bar in the sidebar

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <h1>Autos</h1>
         <div class="data-group">
-            <div class="progress-bar">
+            <div id="average-charge" class="progress-bar">
                 <span class="label">Aktuelle durchschnittliche Ladung</span>
                 <span class="amount">50%</span>
                 <div class="bar">
